--- a/app/src/main/res/layout/addingtodofragment.xml
+++ b/app/src/main/res/layout/addingtodofragment.xml
@@ -73,6 +73,7 @@
             android:text="Cancel"
             android:layout_weight="1"/>
         <Button
+            android:id="@+id/addButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="OK"
